refactoring to allow irct resource to run as its own war but also as part of the wildfly build to test end to end integration